--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,8 @@ phases:
     commands:
       - if [[ $(jq -r '.projectStatus.status' analysis.json) = "ERROR" ]] ; then CODEBUILD_BUILD_SUCCEEDING=0; fi
       
-  serviceRole: arn:aws:iam::250738637992:role/service-role/codebuild-x22196366-babyproducts-service-role
+  post_build:
+    serviceRole: arn:aws:iam::250738637992:role/service-role/codebuild-x22196366-babyproducts-service-role
 artifacts:
   files:
     - '**/*'
