--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,8 +17,8 @@ phases:
       - python --version
   pre_build:
     commands: 
-      - pylint $CODEBUILD_SRC_DIR/*.py
-      - pylint $CODEBUILD_SRC_DIR/*/*.py
+      #- pylint $CODEBUILD_SRC_DIR/*.py
+      #- pylint $CODEBUILD_SRC_DIR/*/*.py
       - sonar-scanner -Dsonar.organization=jeyasoorya2807 -Dsonar.projectKey=jeyasoorya2807_x22196366-bpno-4- -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=f8897117b82d62e43c5c1bd2169beef662bebc85
       - sleep 5
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=jeyasoorya2807_x22196366-bpno-4- > analysis.json
